# ColorfulRabbitRs

./: Cargo.toml  demo.xlsx  readme.md
examples/: command.rs  common.rs  datetimex.rs  folder.rs  xls.rs
src/: lib.rs  main.rs
src/datet/: datet.rs  mod.rs
src/file/: file.rs  mod.rs  xls_csv.rs
src/utils/: utils.rs
tests/: file_test.rs  test.sh  utils_test.rs  xls_cvs_test.rs
