[package]
name = "colorful_rabbit_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rust_xlsxwriter = "0.64.1"
calamine = "0.23.1"
chrono = "0.4"

[[example]]
name = "command"
path = "examples/command.rs"

[[example]]
name = "xls"
path = "examples/xls.rs"

[[example]]
name = "folder"
path = "examples/folder.rs"

[[example]]
name = "mydatetimex"
path = "examples/datetimex.rs"




